signup, login working

--- a/soundSpace/src/index.css
+++ b/soundSpace/src/index.css
@@ -73,3 +73,12 @@ h1 {
   font-family: 'Rajdhani', sans-serif;
 }
 
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card img {
+  height: 100px;
+}
