--- a/soundSpace/src/index.css
+++ b/soundSpace/src/index.css
@@ -69,16 +69,222 @@ button:focus-visible {
 }
  */
 
-h1 {
-  font-family: 'Rajdhani', sans-serif;
+* {
+  margin: 0;
+  
 }
 
-.container {
+h1, h2 {
+  font-family: 'Rajdhani', sans-serif;
+  text-align: center;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+.logo {
+  font-family: 'Rajdhani', sans-serif;
+  text-decoration: none;
+  color: white;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.navbar {
+  color:white;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+}
+
+.navbarRight {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.background {
+  max-width: 100vw;
+}
+
+.link {
+  padding: 0 10px;
+  text-decoration: none;
+  color: white;
+}
+
+.page {
+  width: 100vw;
+}
+
+.linkImg {
+  width: 300px;
+}
+
+.homepageLinks {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
 
+.linksCard {
+  border: rgb(35, 35, 35) solid 1px;
+  border-radius: 20px;
+  padding: 15px;
+  margin: 20px 20px 30px 20px;
+
+}
+
+.btnLinks {
+  text-align: center;
+  margin: 20px;
+}
+
+.btn {
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 600;
+  text-decoration: none;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  padding: 15px;
+  margin: 20px; 
+}
+
+.formBtn {
+  font-family: 'Rajdhani', sans-serif;
+  font-weight: 600;
+  text-decoration: none;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 7px; 
+}
+
+.footer {
+  padding: 5px;
+  text-align: center;
+  color:white;
+  background-color: black;
+  position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
+.container {
+  
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.card {
+  width: 270px;
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+}
 .card img {
   height: 100px;
+}
+
+.dropdown {
+  position: relative;
+  width: 100px; /* Adjust the width as needed */
+}
+
+.dropdown select {
+  width: 100%;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.dropdown select:focus {
+  outline: none;
+  border-color: #2196f3; /* Change the color to match your design */
+  box-shadow: 0 2px 4px rgba(33, 150, 243, 0.2); /* Change the color to match your design */
+}
+
+.dropdown::after {
+  content: "\25BC";
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  color: #777;
+}
+
+.dropdown select[disabled] {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+.dropdown select[disabled]::after {
+  color: #999;
+}
+
+.errorMessage {
+  color: red;
+}
+
+.forms {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+label {
+  font-size: 0.8rem;
+}
+
+.aboutUs {
+  padding: 70px;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+.col-25 {
+  float: left;
+  width: 40%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 60%;
+  margin-top: 14px;
+}
+
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
 }
