getting the jobs from the user

--- a/soundSpace/src/index.css
+++ b/soundSpace/src/index.css
@@ -299,6 +299,11 @@ label {
   padding: 6px;
 }
 
+.allJobs {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
 @media screen and (max-width: 600px) {
   .col-25, .col-75, input[type=submit] {
     width: 100%;
