--- a/soundSpace/src/index.css
+++ b/soundSpace/src/index.css
@@ -334,7 +334,7 @@ form {
 }
 
 .allProducersImg {
-  height: 150px;
+  height: 100px;
   border-radius: 200px;
 }
 
@@ -415,6 +415,7 @@ form {
 .allJobsListings {
   display:flex;
   flex-direction: row-reverse;
+  flex-wrap: wrap;
 }
 
 .allJobsProfile {
