--- a/soundSpace/src/index.css
+++ b/soundSpace/src/index.css
@@ -338,6 +338,17 @@ form {
   border-radius: 200px;
 }
 
+.allProducersContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.profileInfoAP {
+  text-align: center;
+}
+
 .imgInfoCard {
   height:fit-content;
   padding: 10px 0;
@@ -416,12 +427,14 @@ form {
   display:flex;
   flex-direction: row-reverse;
   flex-wrap: wrap;
+  gap: 15px;
 }
 
 .allJobsProfile {
   max-width: 100vw;
   display:flex;
   flex-direction: column-reverse;
+  
 }
 
 .jobPostsProfile {
@@ -432,6 +445,7 @@ form {
   color: white;
   background: black;
   width: 200px;
+  
 }
 
 
@@ -443,6 +457,11 @@ form {
   color: white;
   background: black;
   max-width: 100px;
+  height: 150px;
+  text-align: center;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @media screen and (min-width: 490px) {
